infra/lb-minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-lb
spec:
  type: LoadBalancer
  ports:
  - name: minio-api
    port: 9000
    protocol: TCP
    targetPort: minio-api
  - name: minio-console
    port: 9001
    protocol: TCP
    targetPort: minio-console
  selector:
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
