infra/lb-ray.yaml
apiVersion: v1
kind: Service
metadata:
  name: ray-lb
spec:
  type: LoadBalancer
  ports:
  - name: ray-api
    port: 10001
    protocol: TCP
    targetPort: 10001
  - name: ray-dashboard
    port: 8265
    protocol: TCP
    targetPort: 8265
  selector:
    ray.io/cluster: raycluster-complete
    ray.io/identifier: raycluster-complete-head
    ray.io/node-type: head
