infra/ingress-orion.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: orion-api
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - kind: Service
          name: prefect-orion
          namespace: default
          port: 4200
