infra/ingress-server.yaml
# TODO: use ingress see https://github.com/PrefectHQ/prefect-helm/blob/main/charts/prefect-server/README.md

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prefect-server
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      services:
        - kind: Service
          name: prefect-server
          namespace: default
          port: 4200
